--- a/.htaccess
+++ b/.htaccess
@@ -17,8 +17,9 @@ RewriteRule ^dokumente/01/(\d+)$ dokumente/schreiben.php?dok=$1 [L]
 RewriteRule ^dokumente/02/(\d+)$ dokumente/urkunde.php?dok=$1 [L]
 RewriteRule ^dokumente/03/(\d+)$ dokumente/zertifikat.php?dok=$1 [L]
 RewriteRule ^dokumente/04/(\d+)$ dokumente/vertrag.php?dok=$1 [L]
-RewriteRule ^admin/antraege/antrag/(\d+)$ admin/antraege/t-view.php?antrag=$1 [L]
-RewriteRule ^admin/cirs/fall/(\d+)$ admin/cirs/t-view.php?case=$1 [L]
-RewriteRule ^admin/edivi/protokoll/(\d+)$ admin/edivi/view.php?id=$1 [L]
-RewriteRule ^admin/users/(\d+)$ admin/users/edit.php?id=$1 [L]
+RewriteRule ^admin/antraege/antrag(\d+)$ admin/antraege/t-view.php?antrag=$1 [L]
+RewriteRule ^admin/cirs/case(\d+)$ admin/cirs/t-view.php?case=$1 [L]
+RewriteRule ^admin/edivi/divi(\d+)$ admin/edivi/view.php?id=$1 [L]
+RewriteRule ^admin/users/user(\d+)$ admin/users/edit.php?id=$1 [L]
+RewriteRule ^cirs/case(\d+)$ cirs/view.php?case=$1 [L]
 # RewriteRule ^admin/personal/(\d+)$ admin/personal/profile.php?id=$1 [L]
