--- a/.htaccess
+++ b/.htaccess
@@ -22,5 +22,5 @@ RewriteRule ^admin/cirs/case(\d+)$ admin/cirs/t-view.php?case=$1 [L]
 RewriteRule ^admin/edivi/divi(\d+)$ admin/edivi/view.php?id=$1 [L]
 RewriteRule ^admin/users/user(\d+)$ admin/users/edit.php?id=$1 [L]
 RewriteRule ^cirs/case(\d+)$ cirs/view.php?case=$1 [L]
-RewriteRule ^edivi/p-(\d+)$ edivi/protokoll.php?enr=$1 [L]
+RewriteRule ^edivi/p-([\w-]+)$ edivi/protokoll.php?enr=$1 [L]
 # RewriteRule ^admin/personal/(\d+)$ admin/personal/profile.php?id=$1 [L]
